--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -1,6 +1,6 @@
 #フィールド名
 name=名前
-gender=性別
+gender=「性別」
 nationality=国籍
 merriageSts=結婚
 dateOfYear=年
@@ -20,6 +20,27 @@ drivingLicense=免許番号
 userId=ログインID
 pwd=パスワード
 rePwd=再パスワード
+
+#bishnu use something extra 
+firstName=「姓」
+lastName=「名」
+dateofyear=「生年月日・年」
+dateofmonth=「生年月日・月」
+dateofday=「生年月日・日」
+marriedStatus=「結婚」
+countryStatus=「国籍」
+mobile1=「携帯電話1」
+mobile2=「携帯電話2」
+mobile3=「携帯電話3」
+tel1=「電話1」
+tel2=「電話2」
+tel3=「電話3」
+zipCode=「郵便番号」
+address3=「住所3」
+mortageLoan=「免許」
+licenseNumber=「免許番号」
+password=「パスワード」
+re_password=「再パスワード」
 
 
 
