--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -64,3 +64,7 @@ min_check={0}は{1}以上を入力してください
 max_check={0}は{1}以下を入力してください
 #ステータスチェック
 true_check=有りの場合は{0}入力してください。
+#郵便番号チェック
+length_post_check={0}は7桁数を入力してください。
+
+common_error=お手数ですが、赤字コメント項目をご確認いただき再入力をお願い致します。
