--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -41,6 +41,8 @@ mortageLoan=「免許」
 licenseNumber=「免許番号」
 password=「パスワード」
 re_password=「再パスワード」
+kataLastName=「セイ 」
+kataFirstName=「メイ」
 
 
 
@@ -48,8 +50,10 @@ re_password=「再パスワード」
 require_check={0}は必須入力です
 #必須選択チェック
 select_check={0}は必須選択してください
+
+katakana_check=カタカナで入力してください
 #メールアドレス形式チェック
-email_check={0}はメールアドレス形式で入力してください
+email_check=メールアドレス形式で入力してください
 #入力文字数チェック
 length_check={0}は、{2}文字以上、{1}文字以下の文字で入力してください
 
