--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
 			<version>3.0.0</version>
 		</dependency>
 		<dependency>
+    <groupId>com.cedarsoftware</groupId>
+    <artifactId>java-util</artifactId>
+    <version>1.8.0</version>
+</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
