--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,16 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 		<dependency>
+	<groupId>org.apache.commons</groupId>
+	<artifactId>commons-csv</artifactId>
+	<version>1.8</version>
+</dependency>
+<dependency>
+ <groupId>com.github.librepdf</groupId>
+ <artifactId>openpdf</artifactId>
+ <version>1.3.8</version>
+</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
