--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@
 #spring.jpa.properties.hibernate.format_sql=true
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+server.port=8082
 
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/ssb
 spring.datasource.username=root
